--- a/ReplaceGuide/VSCode/style.css
+++ b/ReplaceGuide/VSCode/style.css
@@ -5,6 +5,6 @@
 }
 
 .editor-group-watermark .letterpress {
-  background-image: url("https://raw.githubusercontent.com/Aikoyori/ProgrammingVTuberLogos/main/VSCode/VSCode.png") !important;
+  background-image: url("https://github.com/kuuay/ProgrammingVTuberLogos/main/python.png") !important;
   aspect-ratio: 8/5 !important;
 }
